--- a/src/templates/_properties-input.twig
+++ b/src/templates/_properties-input.twig
@@ -36,146 +36,14 @@
                 </th>
 
                 <td class="singleline-cell textual">
-                    {% switch propertyConfig.type %}
 
-                    {% case 'text' or 'number' or 'email' %}
+                    {% set template = settings.extraPropertiesConfig[propertyConfig.type].template ?? settings.propertiesConfig[propertyConfig.type].template %}
 
-                        {{ forms.text({
-                            name: propertyConfig.handle,
-                            type: propertyConfig.type,
-                            value: properties[propertyConfig.handle] ?? '',
-                            placeholder: propertyConfig.placeholder ?? ''
-                        }) }}
-
-                    {% case 'date' %}
-
-                        {{ forms.date({
-                            name: propertyConfig.handle,
-                            type: propertyConfig.type,
-                            value: properties[propertyConfig.handle] ?? '',
-                            placeholder: propertyConfig.placeholder ?? ''
-                        }) }}
-
-                    {% case "textarea" %}
-
-                        {{ forms.textArea({
-                            name: propertyConfig.handle,
-                            value: properties[propertyConfig.handle] ?? '',
-                            placeholder: propertyConfig.placeholder ?? '',
-                            rows: 2,
-                            class: 'nicetext',
-                        }) }}
-
-                    {% case 'boolean' %}
-                        <div style="padding: 16px 8px 8px 8px">
-                            {{ forms.lightswitch({
-                                name: propertyConfig.handle,
-                                type: propertyConfig.type,
-                                on: properties[propertyConfig.handle] ?? '',
-                                placeholder: propertyConfig.placeholder ?? ''
-                            }) }}
-                        </div>
-                    {% case "select" %}
-                        {% set options = propertyConfig.options|replace('\r','')|split('\n')|map(option => option|split(':', 2)) %}
-
-                        {% set optionValue = properties[propertyConfig.handle] ?? '' %}
-
-                        {% set options = options|map(option => {
-                            value: option[0],
-                            label: option|length == 2 ? option [1] : option[0]
-                        }) %}
-
-                        {% if not propertyConfig.required %}
-                            {% set options = options|unshift({value: '', label: '-'}) %}
-                        {% endif %}
-
-                        <div style="padding: 8px;">
-                            {{ forms.select({
-                                name: propertyConfig.handle,
-                                value: properties[propertyConfig.handle] ?? '',
-                                placeholder: propertyConfig.placeholder ?? '',
-                                options: options,
-                            }) }}
-                        </div>
-
-                    {% case "entry" or "entries" or "asset" or "assets" %}
-                        {% if not propertyConfig.options %}
-                            {% exit 403 "No source provided" %}
-                        {% endif %}
-
-                        {% set value = properties[propertyConfig.handle] ?? null %}
-
-                        {% if propertyConfig.type == 'entry' or propertyConfig.type == 'entries' %}
-                            {% set sectionHandles = propertyConfig.options|split(',') %}
-                            {% set sources = sectionHandles|map(handle => "section:#{craft.app.entries.sectionByHandle(handle).uid}") %}
-                            {% set elementType = 'craft\\elements\\Entry' %}
-                            {% set elements = value ? craft.entries.id(properties[propertyConfig.handle]).all : [] %}
-                            {% set isSingle = propertyConfig.type == 'entry' %}
-                            {% set viewMode = settings.entriesViewMode %}
-                        {% endif %}
-
-                        {% if propertyConfig.type == 'asset' or propertyConfig.type == 'assets' %}
-                            {% set volumeHandles = propertyConfig.options|split(',') %}
-                            {% set sources = volumeHandles|map(handle => "volume:#{craft.app.volumes.volumeByHandle(handle).uid}") %}
-                            {% set elementType = 'craft\\elements\\Asset' %}
-                            {% set elements = value ? craft.assets.id(properties[propertyConfig.handle]).all : [] %}
-                            {% set isSingle = propertyConfig.type == 'asset' %}
-                            {% set viewMode = settings.assetsViewMode %}
-                        {% endif %}
-
-                        <div style="padding: 8px;">
-
-                            {{ forms.elementSelect({
-                                name: propertyConfig.handle,
-                                elements: elements,
-                                elementType: elementType,
-                                single: isSingle,
-                                viewMode: viewMode,
-                                showCardsInGrid: true,
-                                sources: sources
-                            }) }}
-
-                        </div>
-
-                    {% case "extendedBoolean" %}
-                        <div style="padding: 16px 8px 8px 8px; display: flex; align-items: center">
-                            {{ forms.lightswitch({
-                                name: "#{propertyConfig.handle}[isOn]",
-                                on: properties[propertyConfig.handle]['isOn'] ?? '',
-                            }) }}
-
-                            {{ forms.text({
-                                name: "#{propertyConfig.handle}[comment]",
-                                label: 'Comment',
-                                class: 'text-combined text-margin',
-                                placeholder: 'Comment',
-                                value: properties[propertyConfig.handle]['comment'] ?? ''
-                            }) }}
-                        </div>
-
-                    {% case "dimension" %}
-                        <div style="padding: 16px 8px 8px 8px; display: flex; align-items: center">
-                            <div>
-                                {{ forms.textField({
-                                    name: "#{propertyConfig.handle}[quantity]",
-                                    label: 'Quantity',
-                                    type: 'number',
-                                    class: 'text-combined',
-                                    value: properties[propertyConfig.handle]['quantity'] ?? ''
-                                }) }}
-                            </div>
-
-                            <div>
-                                {{ forms.textField({
-                                    name: "#{propertyConfig.handle}[unit]",
-                                    label: 'Unit',
-                                    class: 'text-combined text-margin',
-                                    value: properties[propertyConfig.handle]['unit'] ?? '',
-                                    first: true
-                                }) }}
-                            </div>
-                        </div>
-                    {% endswitch %}
+                    {% include template ignore missing with {
+                    	propertyConfig,
+                        value: properties[propertyConfig.handle],
+                        settings
+                    }  only %}
 
                 </td>
             </tr>
