--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -9,14 +9,7 @@
     warning: config.showTableHeader is defined ? _self.configWarning('showTableHeader')
 }) }}
 
-{{ forms.textField({
-    label: 'Date output format'|t('_properties-field'),
-    name: 'dateFormat',
-    value: settings.dateFormat,
-    instructions: 'The format used for normalized date output'|t('_properties-field'),
-    tip: 'This can be anything that Craft::$app->formatter->asDate() accepts, typically `short/medium/long`'|t('_properties-field'),
-    warning: config.dateFormat is defined ? _self.configWarning('dateFormat')
-}) }}
+
 
 {{ forms.selectField({
     label: 'View Mode for entries sub-fields'|t('_properties-field'),
@@ -40,6 +33,13 @@
     warning: config.assetsViewMode is defined ? _self.configWarning('assetsViewMode')
 }) }}
 
+{{ forms.textField({
+    label: 'Custom input template directory'|t('_properties-field'),
+    name: 'customInputTemplateDir',
+    value: settings.customInputTemplateDir,
+    instructions: 'If custom properties are used, this is the folder inside a projects `template` directory where the input templates live.'|t('_properties-field'),
+    warning: config.customInputTemplateDir is defined ? _self.configWarning('customInputTemplateDir')
+}) }}
 
 {% macro configWarning(setting) -%}
     {{ 'This is being overridden by the `{setting}` config setting and cannot be changed here.'|t('_properties-field', {setting: setting })|markdown(inlineOnly=true) }}
