--- a/src/templates/_inputs/select.twig
+++ b/src/templates/_inputs/select.twig
@@ -15,7 +15,6 @@
     {{ forms.select({
         name: propertyConfig.handle,
         value: value ?? '',
-        placeholder: propertyConfig.placeholder ?? '',
         options: options,
-    }) }}
+    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
 </div>
