--- a/src/templates/_inputs/elementSelect.twig
+++ b/src/templates/_inputs/elementSelect.twig
@@ -34,6 +34,6 @@
         viewMode: viewMode,
         showCardsInGrid: true,
         sources: sources
-    }) }}
+    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
 
 </div>
