--- a/src/templates/_properties-input.twig
+++ b/src/templates/_properties-input.twig
@@ -30,7 +30,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <th class="heading-cell thin" style="text-align: left; padding: 7px;">
+                    <th class="heading-cell thin" style="background-color: var(--gray-050); text-align: left; padding: 7px;">
                         {{ propertyConfig.name|t }}
                         {% if propertyConfig.instructions ?? null %}
                             <span class="info">
