--- a/src/templates/_inputs/extendedBoolean.twig
+++ b/src/templates/_inputs/extendedBoolean.twig
@@ -9,7 +9,7 @@
     {{ forms.text({
         name: "#{propertyConfig.handle}[comment]",
         label: 'Comment',
-        class: 'text-combined text-margin',
+        class: 'text-border text-margin',
         placeholder: 'Comment',
         value: value['comment'] ?? ''
     }) }}
