--- a/src/templates/_inputs/text.twig
+++ b/src/templates/_inputs/text.twig
@@ -1,7 +1,13 @@
 {% import '_includes/forms.twig' as forms %}
 
+{% set fieldConfig = propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {} %}
+
 {{ forms.text({
     name: propertyConfig.handle,
     type: propertyConfig.type,
     value: value ?? ''
-}|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+}|merge(fieldConfig)) }}
+
+{% if fieldConfig and 'suffix' in fieldConfig %}
+    {{ fieldConfig.suffix }}
+{% endif %}
