--- a/src/templates/_inputs/boolean.twig
+++ b/src/templates/_inputs/boolean.twig
@@ -5,5 +5,5 @@
         name: propertyConfig.handle,
         type: propertyConfig.type,
         on: value ?? ''
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
