--- a/src/templates/_inputs/date.twig
+++ b/src/templates/_inputs/date.twig
@@ -4,5 +4,5 @@
         name: propertyConfig.handle,
         type: propertyConfig.type,
         value: value ?? ''
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
