--- a/src/templates/_inputs/datetime.twig
+++ b/src/templates/_inputs/datetime.twig
@@ -6,5 +6,5 @@
         type: propertyConfig.type,
         minuteIncrement: 15,
         value: value ?? ''
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
