--- a/src/templates/_inputs/entriesSelect.twig
+++ b/src/templates/_inputs/entriesSelect.twig
@@ -22,5 +22,5 @@
         values: value ?? '',
         options: options,
         multi: true,
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
