--- a/src/templates/_inputs/select.twig
+++ b/src/templates/_inputs/select.twig
@@ -16,5 +16,5 @@
         name: propertyConfig.handle,
         value: value ?? '',
         options: options,
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
