--- a/src/templates/_inputs/textarea.twig
+++ b/src/templates/_inputs/textarea.twig
@@ -5,4 +5,4 @@
      value: value ?? '',
      rows: 2,
      class: 'nicetext',
- }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+ }|merge(fieldConfig)) }}
