--- a/src/templates/_inputs/country.twig
+++ b/src/templates/_inputs/country.twig
@@ -11,5 +11,5 @@
         name: propertyConfig.handle,
         value: value ?? '',
         options: options,
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
