--- a/src/templates/_inputs/entrySelect.twig
+++ b/src/templates/_inputs/entrySelect.twig
@@ -21,5 +21,5 @@
         name: propertyConfig.handle,
         value: value ?? '',
         options: options,
-    }|merge(propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {})) }}
+    }|merge(fieldConfig)) }}
 </div>
