--- a/src/templates/_inputs/table.twig
+++ b/src/templates/_inputs/table.twig
@@ -1,7 +1,5 @@
 {% import '_includes/forms.twig' as forms %}
 
-{% set extraConfig = propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {} %}
-
 
 <div style="padding: 16px 8px 8px 8px; ">
     {{ forms.editableTable({
@@ -15,5 +13,5 @@
             text: {heading: 'Text'|t, type: 'singleline'},
         },
         rows: value
-    }|merge(extraConfig)) }}
+    }|merge(fieldConfig)) }}
 </div>
