--- a/src/templates/_properties-input.twig
+++ b/src/templates/_properties-input.twig
@@ -91,7 +91,8 @@
                             propertyConfig,
                             value: properties[propertyConfig.handle] ?? null,
                             settings,
-                            element
+                            element,
+                            fieldConfig: propertyConfig.fieldConfig ? propertyConfig.fieldConfig|json_decode : {}
                         }, 'cp')|raw }}
 
                     </td>
