--- a/src/templates/_inputs/extendedBoolean.twig
+++ b/src/templates/_inputs/extendedBoolean.twig
@@ -1,6 +1,6 @@
 {% import '_includes/forms.twig' as forms %}
 
-<div style="padding: 8px 8px 8px 8px; display: flex; align-items: center">
+<div style="padding: 2px 8px 2px 8px; display: flex; align-items: center">
     {{ forms.lightswitch({
         name: "#{propertyConfig.handle}[isOn]",
         on: value['isOn'] ?? '',
@@ -9,8 +9,8 @@
     {{ forms.text({
         name: "#{propertyConfig.handle}[comment]",
         label: 'Comment',
-        class: 'text-border text-margin',
-        placeholder: 'Comment',
+        class: 'text-margin',
+        placeholder: 'Comment'|t('_properties-field'),
         value: value['comment'] ?? ''
     }) }}
 </div>
